--- a/Agricola_Front/test.ipynb
+++ b/Agricola_Front/test.ipynb
@@ -2,25 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum\n",
+    "class FieldType(Enum):\n",
+    "    NONE_FIELD = 0\n",
+    "    ARABLE = 1\n",
+    "    CAGE = 2\n",
+    "    HOUSE = 3\n",
+    "    FENCE = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= FieldType.NONE_FIELD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NONE_FIELD\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "a = [2,5,4,3]\n",
-    "a.remove(1)"
+    "print(a.name)\n",
+    "print(a.value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -39,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
