--- a/Agricola_Front/test.ipynb
+++ b/Agricola_Front/test.ipynb
@@ -76,6 +76,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 번째 로그\n",
+      "3 번째 로그\n",
+      "4 번째 로그\n",
+      "5 번째 로그\n",
+      "6 번째 로그\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Logger:\n",
+    "    def __init__(self, max_lines=5):\n",
+    "        self.max_lines = max_lines\n",
+    "        self.log_list = []\n",
+    "\n",
+    "    def add_log(self, new_message):\n",
+    "        # 새로운 메시지 추가\n",
+    "        self.log_list.append(new_message)\n",
+    "        \n",
+    "        # 로그가 최대 줄 수를 넘으면 가장 오래된 로그 삭제\n",
+    "        if len(self.log_list) > self.max_lines:\n",
+    "            self.log_list.pop(0)\n",
+    "    \n",
+    "    def get_logs(self):\n",
+    "        # 현재 저장된 모든 로그를 하나의 문자열로 반환\n",
+    "        return \"\\n\".join(self.log_list)\n",
+    "\n",
+    "# Logger 객체 생성\n",
+    "logger = Logger()\n",
+    "\n",
+    "# 로그 함수 테스트\n",
+    "logger.add_log(\"1\")\n",
+    "logger.add_log(\"2 번째 로그\")\n",
+    "logger.add_log(\"3 번째 로그\")\n",
+    "logger.add_log(\"4 번째 로그\")\n",
+    "logger.add_log(\"5 번째 로그\")\n",
+    "logger.add_log(\"6 번째 로그\")\n",
+    "\n",
+    "# 저장된 로그 출력\n",
+    "print(logger.get_logs())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
