검증 테스트

--- a/Agricola_Front/test.ipynb
+++ b/Agricola_Front/test.ipynb
@@ -126,6 +126,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def gamestart():pass\n",
+    "def move_worker_to_roundcard(player,roundcard_index):\n",
+    "    return True\n",
+    "def move_animal_to_field(animal,filed_index):\n",
+    "    return True\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "# def ():pass\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamestart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    if move_worker_to_roundcard(1,1):break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#양 두마리를 얻었다고 가정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    if move_animal_to_field(\"sheep\",1):break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
