--- a/Agricola_Front/test.ipynb
+++ b/Agricola_Front/test.ipynb
@@ -258,6 +258,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting PyQt5\n",
+      "  Downloading PyQt5-5.15.10-cp37-abi3-macosx_10_13_x86_64.whl.metadata (2.1 kB)\n",
+      "Collecting PyQt5-sip<13,>=12.13 (from PyQt5)\n",
+      "  Downloading PyQt5_sip-12.13.0-cp312-cp312-macosx_10_9_universal2.whl.metadata (504 bytes)\n",
+      "Collecting PyQt5-Qt5>=5.15.2 (from PyQt5)\n",
+      "  Downloading PyQt5_Qt5-5.15.14-py3-none-macosx_10_13_x86_64.whl.metadata (536 bytes)\n",
+      "Downloading PyQt5-5.15.10-cp37-abi3-macosx_10_13_x86_64.whl (7.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.0/7.0 MB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading PyQt5_Qt5-5.15.14-py3-none-macosx_10_13_x86_64.whl (38.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m38.8/38.8 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading PyQt5_sip-12.13.0-cp312-cp312-macosx_10_9_universal2.whl (146 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m146.4/146.4 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: PyQt5-Qt5, PyQt5-sip, PyQt5\n",
+      "Successfully installed PyQt5-5.15.10 PyQt5-Qt5-5.15.14 PyQt5-sip-12.13.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install PyQt5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting PyInstaller\n",
+      "  Downloading pyinstaller-6.7.0-py3-none-macosx_10_13_universal2.whl.metadata (8.3 kB)\n",
+      "Collecting setuptools>=42.0.0 (from PyInstaller)\n",
+      "  Downloading setuptools-70.0.0-py3-none-any.whl.metadata (5.9 kB)\n",
+      "Collecting altgraph (from PyInstaller)\n",
+      "  Downloading altgraph-0.17.4-py2.py3-none-any.whl.metadata (7.3 kB)\n",
+      "Collecting pyinstaller-hooks-contrib>=2024.6 (from PyInstaller)\n",
+      "  Downloading pyinstaller_hooks_contrib-2024.6-py2.py3-none-any.whl.metadata (16 kB)\n",
+      "Requirement already satisfied: packaging>=22.0 in /Users/hoon/Library/Python/3.12/lib/python/site-packages (from PyInstaller) (24.0)\n",
+      "Collecting macholib>=1.8 (from PyInstaller)\n",
+      "  Downloading macholib-1.16.3-py2.py3-none-any.whl.metadata (11 kB)\n",
+      "Downloading pyinstaller-6.7.0-py3-none-macosx_10_13_universal2.whl (960 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m960.3/960.3 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading macholib-1.16.3-py2.py3-none-any.whl (38 kB)\n",
+      "Downloading altgraph-0.17.4-py2.py3-none-any.whl (21 kB)\n",
+      "Downloading pyinstaller_hooks_contrib-2024.6-py2.py3-none-any.whl (339 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m339.2/339.2 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading setuptools-70.0.0-py3-none-any.whl (863 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m863.4/863.4 kB\u001b[0m \u001b[31m12.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: altgraph, setuptools, macholib, pyinstaller-hooks-contrib, PyInstaller\n",
+      "Successfully installed PyInstaller-6.7.0 altgraph-0.17.4 macholib-1.16.3 pyinstaller-hooks-contrib-2024.6 setuptools-70.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install PyInstaller"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -280,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
