--- a/Agricola_Front/test.ipynb
+++ b/Agricola_Front/test.ipynb
@@ -387,7 +387,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def CONVERTER_to_VIRTUAL_FIELD(field, vfence, hfence):\n",
+    "    virtual_field = [[\"NONE_FIELD\" for _ in range(11)] for _ in range(7)]\n",
+    "    #field mapping\n",
+    "    row_num = 0\n",
+    "    for row in field:\n",
+    "        col_num = 0\n",
+    "        for col in row:\n",
+    "            virtual_field[1+row_num*2][1+col_num*2] = col\n",
+    "            col_num += 1\n",
+    "        row_num += 1\n",
+    "    #vfence mapping\n",
+    "    for row in vfence:\n",
+    "        row_num = 0\n",
+    "        for col in row:\n",
+    "            col_num = 0\n",
+    "            virtual_field[1+row_num*2][1+col_num*2] = col\n",
+    "\n",
+    "    \n",
+    "    return (virtual_field)"
+   ]
   }
  ],
  "metadata": {
